--- a/w2/views/products/index.ejs
+++ b/w2/views/products/index.ejs
@@ -23,6 +23,7 @@
                 </li>
             <% }); %>
         </ul>
+        <a href="/products/create">Add Product</a>
     
 </body>
 </html>
