--- a/express/views/add.pug
+++ b/express/views/add.pug
@@ -5,28 +5,40 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr", crossorigin="anonymous")
+        script(src="https://code.jquery.com/jquery-3.3.1.min.js")
+        script(src="/js/file.js")
         title=title
     body
         h1=title
-        form(action="/user", method="post")
-            label(for="item") Item: 
-            input(type="text", name="item")
+        form(action=`/user`, method="post", enctype="multipart/form-data")
+            label(for="Username") Username: 
+            input(type="text", name="username")
             br
-            label(for="qty") Qty: 
-            input(type="number", name="qty")
+            label(for="Name") Name: 
+            input(type="text", name="fullname")
+            br
+            label(for="Password") Password: 
+            input(type="password", name="password")
+            br
+            label(for="Email") Email: 
+            input(type="email", name="email")
+            br
+            label(for="Avatar") Avatar:
+            img#previewImage(src="") 
+            input#inputImage(type="file", name="avatar")
+            br
+            label(for="Age") Age: 
+            input(type="number", name="age")
             br            
-            label(for="status") Status: 
-            input(type="text", name="status")
+            label(for="Status") Status: 
+            input(type="checkbox", name="status")
             br
-            label(for="size") Size
+            label(for="Bio") Bio
                 br
-                label(for="w") w: 
+                label(for="w") W: 
                 input(type="number", name="w")
                 br
-                label(for="h") h: 
+                label(for="h") H: 
                 input(type="number", name="h")
-                br
-                label(for="uom") uom: 
-                input(type="text", name="uom")
                 br
             button(value="submit") Add
